--- a/heythere.html
+++ b/heythere.html
@@ -13,6 +13,9 @@
     <title>Coffee</title>
 </head>
 <body id='body' onload="init()">
+    <div class="bgcover"></div>
+
+    <div class="top-text">still working on it</div>
     <div class="container main-header">
         <div id='main-text' class="main-text typewriter hide-text">Hello</div>
         <div id="date"></div>
