--- a/mhcalc2.html
+++ b/mhcalc2.html
@@ -11,6 +11,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/mhcalc2.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118927018-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-118927018-1');
+    </script>
+
     <title>Damage Calc V2</title>
 </head>
 
@@ -66,11 +76,11 @@
     <div class="container btn-row">
         <!-- <a class="left-align waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a> -->
         <!-- Modal Trigger -->
-            <button id="chart-btn" data-target="modal1" class="btn modal-trigger waves-effect waves-orange" v-on:click="getChart">Compare</button>
+        <button id="chart-btn" data-target="modal1" class="btn modal-trigger waves-effect waves-orange" v-on:click="getChart">Compare</button>
         <!-- <div  class="right-align"> -->
-            <a id="addButton" href="#" class="btn-floating btn-small waves-effect waves-teal orange">
-                <i class="material-icons mouse-pointer right-align" v-on:click="addRow">add</i>
-            </a>
+        <a id="addButton" href="#" class="btn-floating btn-small waves-effect waves-teal orange">
+            <i class="material-icons mouse-pointer right-align" v-on:click="addRow">add</i>
+        </a>
         <!-- </div> -->
     </div>
 
