Changed 'nature' to 'dogs'

--- a/mobile.html
+++ b/mobile.html
@@ -27,7 +27,7 @@
                 <h2>Not Our Work</h2>
             </div>
 
-            <img src="https://source.unsplash.com/1600x900/?nature" alt="">
+            <img src="https://source.unsplash.com/1600x900/?dogs" alt="">
             <div class="caption">
                 <h3>Photo 1</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae ea impedit dolorem maiores exercitationem
